fix spacing on github repo link

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3052,7 +3052,7 @@ input, select, textarea {
 			}
 
 				.feature .content {
-					padding: 2.5em;
+					padding: 1em 2.5em 2.5em;
 				}
 
 		/* Header */
